--- a/RAG_system.ipynb
+++ b/RAG_system.ipynb
@@ -1378,7 +1378,7 @@
         "from google.colab import userdata\n",
         "\n",
         "# Retrieve the Hugging Face token from Colab's secrets\n",
-        "token = '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'\n",
+        "token = 'PUT HER YOUR TOKEN'\n",
         "\n",
         "# Check if the token is retrieved successfully\n",
         "if token is not None:\n",
